Changelog for Quantum Information Toolkit

+ added
- removed
* changed
b bugfix


0.9.0       2009-07-18 (first public beta)

0.9.1       2009-09-29
              + version string in qit namespace
              + examples: bb84 and markov_decoherence
              * state/propagate redesigned
              * Born-Markov noise package redesigned

0.9.2       2009-12-17
              + state methods: fidelity, trace_dist, fix_phase
              + plots/adiabatic_evolution
              + examples/grover_search
              b state/display fixed, prints also the imaginary parts
              * renamed state methods: purify => to_ket, operator => to_op
              * plots/tomography shows relative phases in color
              * nicer examples
              * lindblad.@bath class

0.9.3       2010-01-13
              + utils/makemovie for making AVI movies of plots
              + lindblad/superop
              + state arithmetic: plus, minus, mtimes, mrdivide, normalize
              + examples/superdense_coding
              b state/measure gives correct collapsed states
              * gate/qft also handles non-qubit systems
              * state/propagate uses ode45 for time-dependent Hamiltonians
              * examples/nmr_sequences produces nicer plots

0.9.4       2010-01-19
              + utils: majorize, spectral_decomposition
              + Harmonic oscillator package
              + ho methods: ladder, displace, squeeze, coherent_state,
                momentum_state, position_state, wigner
              + examples/qubit_and_resonator
              * state/measure also measures arbitrary Hermitian observables

0.9.5       2010-02-04
              + state/locc_convertible
              - state/overlap (replaced by state/fidelity)
              + ho methods: position, momentum, husimi
              + utils/asongoficeandfire
              b utils/lrmul did unnecessary work
              * Born-Markov package again reorganized, uses lookup